--- a/stou_customer_frontend/package.json
+++ b/stou_customer_frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "browser-image-compression": "^1.0.6",
     "crypto-js": "^3.1.9-1",
     "firebase": "^7.1.0",
     "image-to-base64": "^2.0.1",
