--- a/stou_cook_frontend/package.json
+++ b/stou_cook_frontend/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "browser-image-compression": "^1.0.6",
     "crypto-js": "^3.1.9-1",
+    "firebase": "^7.2.2",
     "image-to-base64": "^2.0.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
