--- a/stou_customer_frontend/package.json
+++ b/stou_customer_frontend/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.2",
     "react-firebase-file-uploader": "^2.4.2",
+    "react-icons": "^3.8.0",
     "react-paypal-button-v2": "^2.4.1",
     "react-paypal-express-checkout": "^1.0.5",
     "react-rating": "^2.0.0",
