--- a/stou_customer_frontend/package.json
+++ b/stou_customer_frontend/package.json
@@ -11,6 +11,7 @@
     "image-to-base64": "^2.0.1",
     "paypal-checkout": "^4.0.296",
     "prop-types": "^15.7.2",
+    "pusher-js": "^5.0.2",
     "react": "^16.9.0",
     "react-async-script-loader": "^0.3.0",
     "react-bootstrap": "^1.0.0-beta.12",
