--- a/stou_cook_frontend/package.json
+++ b/stou_cook_frontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.7.0",
+    "@pusher/chatkit": "^0.7.18",
+    "@pusher/chatkit-client": "^1.13.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "browser-image-compression": "^1.0.6",
