--- a/stou_customer_frontend/package.json
+++ b/stou_customer_frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@pusher/chatkit": "^0.7.18",
     "@pusher/chatkit-client": "^1.13.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
