--- a/stou_cook_frontend/package.json
+++ b/stou_cook_frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
+    "@livechat/ui-kit": "^0.4.0-10",
     "@pusher/chatkit": "^0.7.18",
     "@pusher/chatkit-client": "^1.13.2",
     "axios": "^0.19.0",
