--- a/stou_admin_frontend/package.json
+++ b/stou_admin_frontend/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-toggle": "^2.3.2",
     "react-dom": "^16.12.0",
     "react-paginate": "^6.3.2",
     "react-rating": "^2.0.3",
