--- a/stou_backend/package.json
+++ b/stou_backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "@pusher/chatkit-server": "^2.2.0",
@@ -16,7 +16,10 @@
     "pug": "2.0.0-beta11",
     "pusher": "^3.0.0",
     "tedious": "^6.4.0",
-    "uuid": "latest"
+    "uuid": "latest",
+    "cors": "^2.8.5",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.3.0"
   },
   "devDependencies": {
     "cors": "^2.8.5",
