added logging and some sql stuff

--- a/stou_backend/package.json
+++ b/stou_backend/package.json
@@ -15,6 +15,7 @@
     "mysql": "^2.17.1",
     "pug": "2.0.0-beta11",
     "pusher": "^3.0.0",
+    "rotating-file-stream": "^2.0.0",
     "tedious": "^6.4.0",
     "uuid": "latest"
   },
