--- a/stou_backend/package.json
+++ b/stou_backend/package.json
@@ -19,7 +19,8 @@
     "uuid": "latest",
     "cors": "^2.8.5",
     "multer": "^1.4.2",
-    "nodemailer": "^6.3.0"
+    "nodemailer": "^6.3.0",
+    "rotating-file-stream": "latest"
   },
   "devDependencies": {
     "cors": "^2.8.5",
