--- a/stou_cook_frontend/package.json
+++ b/stou_cook_frontend/package.json
@@ -14,6 +14,7 @@
     "firebase": "^7.2.2",
     "image-to-base64": "^2.0.1",
     "pusher-js": "^5.0.2",
+    "raven-js": "^3.27.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
